	* *Archive.m Archive.[h|m], new common.h, *Archive.[h|m],
	  ArchiveService.[h|m], GNUmakefile define and use typedef enum 
	  ArchiveType for the different archive types.
	* ZipperInfo.plist, ArchiveService.[h|m], service to create
	  tar, and .tar.xz archives
	* TarArchive.m, ArchiveService.m, use a NSRunAlertPanel instead
	  of NSLog to tell the user about problems.

2012-12-24: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* ZipArchive.m remove a bogus check, and fix comment
	* ArchiveService.[h|m], ZipperInfo.plist, LhaArchive.[h|m]
	  Add creation of LHA Archives
	* SevenZipArchive.[h|m], ZipperInfo.plist, ArchiveService.[h|m]
	  Add creation of 7z Archives

2012-12-23: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* ArchiveService.[h|m], TarArchive.[h|m]
	* Allow creating of tar.gz and tar.bz2 archives
	* English.lproj/Preferences.nib, Resources/Preferences.gorm,
	  Preferences.[h|m], PreferencesController.[h|m],
	  ZipperInfo.plist
	  Also configure zip binary in Preferences in addition
	  to the unzip binary, and add Service to create zip files

2012-08-08 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GzipArchive.m
	* LhaArchive.m
	* LzxArchive.m
	* RarArchive.m
	* SevenZipArchive.m
	* TarArchive.m
	* ZipArchive.m
	Protect filenames to be extracted to be counted as 
	parameters of the unzipping tools

2012-07-12 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* ZipperDocument.m
	  Add Action methods to (de)selectAll:
	* Resources/ZipperDocument.gorm
	  Allow Empty selection
	* Resources/MainMenu.gorm
	  add Edit submenu with entries to (de)select All

2012-04-21 Riccardo Mottola <rm@gnu.org>

	* PreferencesController.m
	send perform close and trap close and stop modal
	(on Macintosh otherwise the close button would not stop modal)

2012-04-20 Riccardo Mottola <rm@gnu.org>

	* PreferencesController.[h,m]
	Set textfields to empty string if the value is nil.

	* ZipperDocument.m