@@ -6,6 +6,8 @@
 	  tar, and .tar.xz archives
 	* TarArchive.m, ArchiveService.m, use a NSRunAlertPanel instead
 	  of NSLog to tell the user about problems.
+	* PreferencesController.[h|m], Preferences.[h|m], 
+	  Resouces/Preferences.gorm, start adding support for more archivers
 
 2012-12-24: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* ZipArchive.m remove a bogus check, and fix comment
